fix future item alignment and height for small devices

--- a/src/App.css
+++ b/src/App.css
@@ -150,7 +150,7 @@ width: 25%;
   height: 100vh;
 }
 .future-item {
-  height: 18%;
+  height: 12%;
   display: flex;
   align-items: center;
   justify-content: space-between;
